# ai-interactive-cms

./: .env.example  .gitignore  CODEX_INTEGRATION.md  Makefile  README.md  SYSTEMD_README.md  dev_server.py  main.py  pyproject.toml  requirements.txt  test_cms.py  test_codex_integration.py  test_emoji.html  test_env_vars.py  test_websocket.py
static/: index.html  script.js  styles.css
